syntax = "proto3";

package gateway.midware.cors.v1;

option go_package = "github.com/carmel/microservices/gateway/api/midware/cors/v1";

import "google/protobuf/duration.proto";

// Cors midware config.
message Cors {
    bool allow_credentials = 1;
    repeated string allow_origins = 2;
    repeated string allow_methods = 3;
    repeated string allow_headers = 4;
    repeated string expose_headers = 5;
    google.protobuf.Duration max_age = 6;
    bool allow_private_network = 7;
}
